WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
156177
REGRESSION(
r198955
): com.apple.WebKit.Networking.Development crashed in com.apple.WebKit: WebKit::NetworkLoad::setPendingDownloadID + 11
https://bugs.webkit.org/show_bug.cgi?id=156177
Summary
REGRESSION(r198955): com.apple.WebKit.Networking.Development crashed in com.a...
Brent Fulgham
Reported
2016-04-04 13:24:41 PDT
The new tests I added in
Bug 156057
(
r198955
) cause a crash in the Networking process on OS X when built with the NETWORK_SESSION flag turned on. This is because the new NETWORK_SESSION code does not handle Blob URLs properly. This patch corrects the specific cause of the crash in our testing infrastructure. The actual fixes for BLOB URLs will be done under
Bug 156099
.
Attachments
Patch
(1.64 KB, patch)
2016-04-04 13:30 PDT
,
Brent Fulgham
achristensen
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brent Fulgham
Comment 1
2016-04-04 13:25:09 PDT
<
rdar://problem/25508037
>
Brent Fulgham
Comment 2
2016-04-04 13:26:16 PDT
Specific failing test cases: fast/dom/HTMLAnchorElement/anchor-download.html fast/dom/HTMLAnchorElement/anchor-nodownload-set.html http/tests/security/anchor-download-allow-blob.html
Brent Fulgham
Comment 3
2016-04-04 13:30:43 PDT
Created
attachment 275566
[details]
Patch
Brent Fulgham
Comment 4
2016-04-04 14:09:28 PDT
Committed
r199021
: <
http://trac.webkit.org/changeset/199021
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug