Source/WebKit2/NetworkProcess/NetworkLoad.cpp
@@ -183,11 +183,17 @@ void NetworkLoad::convertTaskToDownload(DownloadID downloadID, const ResourceReq
 
 void NetworkLoad::setPendingDownloadID(DownloadID downloadID)
 {
+    if (!m_task)
+        return;
+
     m_task->setPendingDownloadID(downloadID);
 }
 
 void NetworkLoad::setPendingDownload(PendingDownload& pendingDownload)
 {
+    if (!m_task)
+        return;
+
     m_task->setPendingDownload(pendingDownload);
 }
 
